Cleaned up testing code.